--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         
         <br>
         <div class="social-icons">
-        <a style="margin: 0 0 0 0" href="mailto: vn72@cornell.edu">
+        <a style="margin: 0 0 0 0" class="icon" href="mailto: vn72@cornell.edu">
           <i class=""></i>💌
         </a>
-        <a style="margin: 0 0 0 0" href="https://github.com/vianxnguyen">
+        <a style="margin: 0 0 0 0" class="icon" href="https://github.com/vianxnguyen">
           <i class=""></i>👩🏻‍💻
         </a>
-        <a style="margin: 0 0 0 0" href="https://www.linkedin.com/in/vivian-nguyen-78b685187/">
+        <a style="margin: 0 0 0 0" class="icon" href="https://www.linkedin.com/in/vivian-nguyen-78b685187/">
           <i class=""></i>🌷
         </a>
         <!-- <a style="margin: 0 5px 0 0" href="https://scholar.google.com/">
