--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <section>
 
 <p><br>
-  Hello! I am a first year Ph.D. student in Computer Science at Cornell University working with Professor Cristian Danescu-Niculescu-Mizil and Professor Lillian Lee.
+  Hello! I am a first year Ph.D. student in Computer Science at Cornell University advised by Professor Cristian Danescu-Niculescu-Mizil.
   My research interests are in the fields of Natural Language Processing and Computational Social Science.
 </p>
 
